# SkyrimVR_TrueGear

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CmakeLists.txt  README.md  vcpkg.json
TrueGearCppSample/: CMakeLists.txt  TrueGearCppSample.sln  TrueGearCppSample.vcxproj  main.cpp
cmake/: fmtConfig.cmake  spdlogConfig.cmake  toolchain-mingw.cmake
effects/: arrow_hit.json  bow_pull.json  explosion.json
include/: EffectDatabase.hpp  PluginAPI.hpp  TrueGearWebsocket.hpp
src/: EffectDatabase.cpp  TrueGearPlugin.cpp  TrueGearWebsocket.cpp
